<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactSettingsActivity">

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="572dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sort Contracts By:" />

        <RadioGroup
            android:id="@+id/radioGroupSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioBtnBday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Birthday" />

            <RadioButton
                android:id="@+id/radioBtnCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="City" />

            <RadioButton
                android:id="@+id/radioBtnName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name" />
        </RadioGroup>

        <TextView
            android:id="@+id/textSortOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sort Order:" />

        <RadioGroup
            android:id="@+id/radioGroupSortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioBtnDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descending" />

            <RadioButton
                android:id="@+id/radioBtnAsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ascending" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/navbar_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="118dp"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_the_list_of_contacts"
            app:srcCompat="@drawable/contactlisticon" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="121dp"
            android:layout_height="66dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_display_contacts_locations"
            app:srcCompat="@drawable/mapicon" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:contentDescription="@string/button_to_access_settings"
            app:srcCompat="@drawable/settingsicon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>